Issue #2019345 by johnv: Moved code to WorkflowState::create() to hide State specific details.
Issue #2019345 by johnv: Removed dependency on workflow.node.inc in common code.
Issue #2102405 by johnv: Changed interface of workflow_tab_access, workflow_tab_page to be $entity_type resistent.
Issue #2019345 by johnv: Moved some code in workflow.module.
Issue #2019345 by johnv: Fixed workflow_revert now supports all entity types and field names.
Issue #2019345 by johnv: Changed theme_workflow_history_table to add proper 'Operations column' to history table.
Issue #2019345 by johnv: Updated workfow_rules to reflect latest code. Still only supports 'node'.
Issue #2019345 by johnv: Changed constructor of Workflow to be protected.
Issue #2102193 by johnv: Changed call to 'hook_workflow', 'transition permitted' - arguments were swapped.
Issue #2019345 by johnv: Fixed 'force' parameter in call to hook_workflow.
Issue #2019345 by johnv: Added some love to the Workflow Form: less space for schedule block.
Issue #2019345 by johnv: Added some love to the Workflow Form.
Issue #2019345 by johnv: Added some Node/Field API dependent flow logic.
Issue #2137149 by johnv: Changed Workflow History Tab to show workflow_transition_form instead of workflow_node_form.
Issue #2137149 by johnv: Changed Node View page to show workflow_transition_form instead of workflow_node_form.
Issue #2137149 by johnv: Removed workflow_tab_form code, since it is replaced by workflow_transition_form.
Issue #2137219 by johnv: Changed workflow_actions to support Workflow Field.
Issue #2122541 by johnv: Fixed strict warnings in WorkflowScheduledTransition.
Issue #2137149 by johnv: Changed Node Edit page to show workflow_transition_form instead of workflow_node_form.
Issue #2019345 by johnv: Fixed notices on WorkflowDefaultWidget.
Issue #2137149 by johnv: Changed Node Comment form to show workflow_transition_form instead of workflow_node_form.