@@ -20,22 +20,22 @@ function workflowfield_field_formatter_info() {
 /**
  * Implements hook_field_formatter_view().
  *
- * This is a copy of D7 workflow_node_view($node, $view_mode, $langcode)
- * combined with D7 workflow_tab_form($form, $form_state, $node, $workflow, $states, $current),
- * showing the default Workflow widget.
+ * Shows the current state and the Widget on a Node View page or a Workflow History tab.
  */
-function workflowfield_field_formatter_view($entity_type, $entity, $field, $instance, $langcode, $items, $display) {
-  $field_name = $field['field_name'];
-  $current_sid = workflow_node_current_state($entity, $entity_type, $field_name);
+function workflowfield_field_formatter_view($entity_type, $entity, $field, $instance, $langcode = 'und', $items = array(), $display = array()) {
+  $field_name = isset($field['field_name']) ? $field['field_name'] : '';
+  $field_id = isset($field['id']) ? $field['id'] : 0;
 
-  // First compose the current value with the normal formatter from list.module.
-  $list_display = $instance['display']['default'];
-  $list_display['type'] = 'list_default';
-  // Format the $field_name field to a normal $items array.
-  $list_entity = $entity;
-  $list_entity->{$field_name}['und'][0]['value'] = $current_sid;
-  // Render the field.
-  $list_element = field_view_field($entity_type, $list_entity, $field_name, $list_display, $langcode);
+  $current_sid = workflow_node_current_state($entity, $entity_type, $field_name);
+  $current_state = WorkflowState::load($current_sid);
+
+  if ($field_name) {
+    // First compose the current value with the normal formatter from list.module.
+    $list_element = workflow_state_formatter($entity_type, $entity, $field, $instance);
+  }
+  elseif (!empty($field['settings']['widget']['current_status'])) {
+    $list_element = workflow_state_formatter($entity_type, $entity, $field, $instance);
+  }
 
   if ($entity_type == 'comment' || // No Workflow form on a comment display, (Also, this avoids a lot of error messages.)
       (isset($entity->status) && $entity->status == 0) || // or if the entity is not published (not possible for every entity type),  
@@ -44,50 +44,25 @@ function workflowfield_field_formatter_view($entity_type, $entity, $field, $inst
     return $list_element;
   }
 
-  $current_state = WorkflowState::load($current_sid);
-  $options = $current_state->getOptions($entity_type, $entity, $force = FALSE);
-
-  $workflow = $current_state->getWorkflow();
-
   // Only build form if user has possible target state(s).
+  $options = $current_state->getOptions($entity_type, $entity, $force = FALSE);
   if (!$current_state->showWidget($options)) {
     return $list_element;
   }
 
-  // Add some data for the form.
-  $delta = 0;
-  $element = array();
+  $workflow = $current_state->getWorkflow();
 
+  // Add some data for the form.
   // Add the current value to the form.
   // Make sure the current value is before the form. (which has weight = 0.005)
   $list_element['#weight'] = 0;
   $element['workflow_current_state'] = $list_element;
 
-  // Emulate the D7 arrays. These values will be copied to $form_state upon submit.
-  // The first 2 values emulate drupal behaviour.
-  $element['#entity_type'] = $entity_type;
-  $element['#entity'] = $entity;
-  // The following 2 values are added for later reference, too.
-  $element['workflow_field'] = array('#type' => 'value', '#value' => $field);
-  $element['workflow_instance'] = array('#type' => 'value', '#value' => $instance);
-
-  // Make sure the Submit button is added to the form.
-  $instance['widget']['settings']['submit_function'] = 'workflowfield_field_widget_form_submit';
-
-/*
-  // This is a wrapper function for the 'workflow form' Widget. $form is modified by reference.
-  $widget = new WorkflowDefaultWidget($field, $instance, $entity_type, $entity);
-  $form = array();
-  $form_state = array();
-  $element += $widget->formElement($items, $delta, $element, $langcode, $form, $form_state);
- */
-
   // Add the form/widget to the formatter, and include the nid in the form id,
   // to allow multiple forms per page (in listings, with hook_forms() ).
   // Ultimately, this is a wrapper for WorkflowDefaultWidget.
   $entity_id = entity_id($entity_type, $entity);
-
-  $element += drupal_get_form(WORKFLOWFIELD_FORM . '_' . $entity_type . '_' . $entity_id . '_' . $field['id'], $field, $instance, $langcode, $items, $delta, $element);
+  $element += drupal_get_form(implode('_', array('workflow_transition_form', $entity_type, $entity_id, $field_id)), $field, $instance, $entity_type, $entity);
 
   return $element;
 }
